2022-10-20  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha13 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha13: Garage Door';git push
	git tag -a 5.1.1-alpha13 -m 'ncremap: add_fll mpaso, landmask fix';git push --tags

	* ncap2 create dummy input and output files when no filenames provided

	* ncremap add_fll place _FillValue in all cells where sgs_frc_out < rnr_thr = wgt_vld_thr

	* ncremap add --no_add_fll switch to override new MPAS default

2022-10-19  Charlie Zender  <zender@uci.edu>

	* ncremap set add_fll automatically for all MPAS datasets

	* ncremap do not set default mask for sgs to landmask for back-compatibility, leave it unset

	* Change nco_bnr_wrt() prototype to accept size_t var_sz

2022-10-18  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha12 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha12: Seven Falls';git push
	git tag -a 5.1.1-alpha12 -m 'ncremap undup mpas no_stg_grd rnr_thr switches, mpassi add_fll, vrt_ntp: tpt, 1D OK, vrt_xtr add mth=zero,lnr; ncks add_fll trigger where sgs_frc=0.0';git push --tags

	* ncremap move/combine passing of --no_stagger to ncks to avoid double-setting it

	* ncremap move/combine passing of --rnr_thr to ncks to avoid double-setting it

	* ncremap set --add_fll to true for sea-ice models

	* ncremap add clause to cause --add_fll to set cells with sgs_frc == 0.0 to _FillValue

2022-10-13  Charlie Zender  <zender@uci.edu>

	* Add vertical extrapolation methods linear and zero

2022-10-12  Charlie Zender  <zender@uci.edu>

	* Vertically interpolate all variables whose names start with "tpt" with temperature method

	* ncremap allow vertical interpolation on single dimensional (vertical) files

2022-10-09  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.1-alpha11 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.1-alpha11: Tangentially Speaking';git push
	git tag -a 5.1.1-alpha11 -m 'all: stdin requires -o for fl_out; ncap2: stdin reorg';git push --tags
