@@ -128,8 +128,8 @@ Octave TeXInfo manual shows clean TeXInfo structure
 @setfilename nco.info
 
 @c Define edition, date, ...
-@set nco-edition 5.1.1-alpha12
-@set doc-edition 5.1.1-alpha12
+@set nco-edition 5.1.1-alpha13
+@set doc-edition 5.1.1-alpha13
 @set copyright-years 1995--2022
 @set update-year 2022
 @set update-date 20 October 2022
